# pdx-traffic

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TripCheck architecture.excalidraw  airbyte-tripcheck-source.yml  compose.yml  dagster.yaml  pdx-acidents.json  pyproject.toml  tripcheck-api-v1-0.yaml
.github/workflows/: lint.yaml  test.yaml
dags/: __init__.py  io_managers.py  postgres.py  trip_check.py
dags/assets/: trip_check.py
scripts/: combine_pickles.py  get_pdx_accidents.py
src/dags/: __init__.py  jobs.py  s3.py  util.py
src/dags/assets/: trip_check.py
src/dags/assets/trip_check/: metadata.py  trip_check.py
src/sqlmesh/: config.yaml
src/sqlmesh/.cache/model_definition/: 0_151_26_2_68__models__full_model__1738289065_1041772__420892512__db__duckdb  0_151_26_2_68__models__incremental_model__1738289065_1041772__420892512__db__duckdb
src/sqlmesh/.cache/optimized_query/: 0_151_26_2_68__sqlmesh_example_full_model_3886173914  0_151_26_2_68__sqlmesh_example_incremental_model_495185616
src/trip_check_api/: api.py  cls.py  consts.py  incidents.py  metadata.py  pyproject.toml  rwis.py  traffic_detector.py  transforms.py
tests/unit_tests/trip_check_api/: test_trip_check_api.py
trip_check_api/: api.py
trip_check_api_client/: __init__.py  client.py
trip_check_api_client/api/cctv/: cctv_get_inventory_filter.py
trip_check_api_client/api/cls/: cls_get_cls_inventory.py  cls_get_cls_length_data.py  cls_get_cls_speed_data.py
trip_check_api_client/api/dms/: dms_get_inventory_filter.py  dms_get_status.py
trip_check_api_client/api/inc/: inc_get_incd_metadata.py  inc_get_incidents_filter.py  inc_get_incidents_filter_for_waze.py
trip_check_api_client/api/mfp/: mfp_get_m_fparking.py
trip_check_api_client/api/routes/: routes_get_routes.py
trip_check_api_client/api/rw/: rw_get_metadata.py  rw_get_reports_filter.py
trip_check_api_client/api/rwis/: rwis_get_inventory_filter.py  rwis_get_inventory_filter_v2.py  rwis_get_status_filter.py  rwis_get_status_filter_v2.py
trip_check_api_client/api/td/: td_get_inventory_filter.py  td_get_ramp_data_filter.py  td_get_roadway_data_filter.py
trip_check_api_client/api/tle/: tle_get_local_events_by_filter.py  tle_get_local_events_for_waze.py  tle_get_tle_waze_metadata.py
trip_check_api_client/api/wz_dx/: wz_dx_get_activities_filter.py
trip_check_api_client/models/: __init__.py  cctv_inventory.py  cctv_inventory_item.py  cls_data.py  cls_data_item.py  cls_inventory.py  cls_inventory_item.py  cv_restriction.py  dms_current_message.py  dms_inventory.py  dms_inventory_item.py  dms_status.py  dms_status_item.py  incd_end_location.py  incd_event_subtype.py  incd_event_type.py  incd_ift_file.py  incd_incident.py  incd_incidents.py  incd_lane.py  incd_location.py  incd_metadata.py  incd_off_hwy_lanes.py  incd_project_schedule.py  incd_schedule.py  incd_start_location.py  incd_travel_lanes.py  incident_metadata_items.py  incidents.py  incidents_incident.py  incidents_incident_location.py  incidents_incident_location_direction.py  incidents_incident_parent_event.py  incidents_incident_schedule.py  incidents_incident_source.py  incidents_incident_subtype.py  incidents_incident_type.py  local_event.py  local_events.py  mf_parking.py  (+62 more)
