[project]
name = "pdx-traffic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.8.11",
    "dagster>=1.9.6",
    "duckdb>=1.1.3",
    "lonboard>=0.10.3",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "trip_check_api_v_1_client",
]

[tool.uv.sources]
trip-check-api-v-1-client = { path = "trip-check-api-v-1-client", editable = true }

[dependency-groups]
dev = [
    "dagster-webserver>=1.9.6",
]


[tool.dagster]
module_name = "dags"

[project.scripts]
assets = "dags.assets.trip_check.py::main"