[project]
name = "pdx-traffic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.8.11",
    "dagster-aws>=0.25.6",
    "dagster>=1.9.6",
    "duckdb>=1.1.3",
    "lonboard>=0.10.3",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pendulum>=3.0.0",
]

[tool.uv.sources]
trip_check_api = { path = "./src/trip_check_api" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trip_check_api"]

[dependency-groups]
dev = [
    "dagster-webserver>=1.9.6",
]

[tool.dagster]
module_name = "dags"
