[project]
name = "pdx-traffic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.8.11",
    "dagster-aws>=0.25.6",
    "dagster>=1.9.6",
    "duckdb>=1.1.3",
    "lonboard>=0.10.3",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "pendulum>=3.0.0",
]

[tool.uv.sources]
trip_check_api = { path = "./src/trip_check_api" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trip_check_api"]

[dependency-groups]
dev = [
    "dagster-webserver>=1.9.6",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "ruff==0.9.3",
]
test = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[tool.dagster]
module_name = "dags"


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
] # Add @slow decorator for long-running tests

[tool.black]
line-length = 119
# regular expression ignoring multiple patterns separated by '|' and newlines
exclude = '''
/(
    \.venv
  | venv
)/
'''

[tool.flake8]
docstring-convention = "all"
ignore = ["D107", "D212", "E501", "W503", "W605", "D203", "D100"]
exclude = ["venv"]
max-line-length = 119

# radon, flake8 plugin that allows us to check for 'cyclimatic code complexity'
radon-max-cc = 10

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
]
