[project]
name = "trip-check-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Noah Schill", email = "noahrschill@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
trip-check-api = "trip_check_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
